--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+:root{
+  --primary-color:rgb(32, 160, 211);
+  --secondary-color:"";
+  --dark-color:"";
+  --light-color:"";
+  --grey-color:"";
+  --border-radius: 10px;
+  --large-200-text:0rem;
+  --medium-text:0rem;
+  --medium-200-text:0rem;
+  --small-text:0rem;
+  --small-200-text:0rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.custom-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 96%;
+  max-width: 1170px;
+  padding-left: 10px !important;
+  padding-right: 10px !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: #ffffff
 }
